--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body{
     position:absolute;
     left:20%;
 }
-.Nombre .Contenido .foto{
+.Nombre .Contenido .FOTO{
     float: right;
     width: 40%;
     height: 200%;
